# darling-text_cmds

./: CMakeLists.txt  README.md
darling/scripts/: gen_sort.sh
sort/: coll.h
tr/: str.c
